Fixes #1105, #1147 - ClayCSS: Subnav Tbar Primary should support labels, break to new line, have disabled state, and `.component-link` color should have more contrast
ClayCSS: (#1105) Mixin `clay-label-size` added options to configure `margin-bottom`, `margin-left`, `margin-right`, `margin-top`

ClayCSS: (#1105) Mixin `clay-tbar-variant` added options to configure `$padding-x`, `$padding-y`, `$item-justify-content`, `$btn-monospaced-margin-x`, `$btn-monospaced-margin-y`, `$link-monospaced-margin-x`, `$link-monospaced-margin-y`, `$label-size`

ClayCSS (#1105) Tbar added option to break to new lines with `.tbar-nav-shrink`, `.tbar-nav-wrap`, `.subnav-tbar-inline-xs-down`, `.subnav-tbar-inline-sm-down`, `.subnav-tbar-inline-md-down`, `.subnav-tbar-inline-lg-down`, `.subnav-tbar-inline-xl-down`

ClayCSS: (#1105) Label disabled `.close` hover state should look the same

ClayCSS: (#1105) Mixin `clay-link` add option to configure `disabled-text-decoration`

ClayCSS: (#1105) New mixin `clay-label-variant` for creating custom label colors

ClayCSS: (#1147) Subnav Tbar Primary changed `.component-link` color to have more contrast and added `.subnav-tbar-primary.subnav-tbar-disabled` colors

ClayCSS: (#1105) Tbar renamed `.subnav-tbar-inline-*-down` to `.tbar-inline-*-down`

--- a/packages/clay-css/src/scss/atlas/variables/_labels.scss
+++ b/packages/clay-css/src/scss/atlas/variables/_labels.scss
@@ -12,6 +12,15 @@ $label-anchor-hover-text-decoration: underline !default;
 $label-link-text-decoration: none !default;
 $label-link-hover-text-decoration: underline !default;
 
+// Label Close
+
+$label-close: () !default;
+$label-close: map-merge((
+	disabled-color: inherit
+), $label-close);
+
+// Label Sizes
+
 $label-lg: () !default;
 $label-lg: map-merge((
 	font-size: 0.75rem, // 12px
